--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="banner text-center" data-scroll-index='0'>
   <div class="banner-overlay">
     <div class="container">
-      <h1 class="text-capitalize">Best Template for Creative Business</h1>
+      <h1 class="text-capitalize">O2DTD: <b>O</b>ff-road <b>O</b>pen <b>D</b>esert <b>T</b>rail <b>D</b>etection</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec justo rhoncus, pharetra dui ut, cursus turpis. Aenean tincidunt vitae ligula eget congue.</p>
       <a href="#" class="banner-btn">Get Started</a> </div>
   </div>
