--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="banner-overlay">
     <div class="container">
       <h1 class="text-capitalize"><b>O2DTD:</b> <b>O</b>ff-road <b>O</b>pen <b>D</b>esert <b>T</b>rail <b>D</b>etection</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec justo rhoncus, pharetra dui ut, cursus turpis. Aenean tincidunt vitae ligula eget congue.</p>
+      <p>A novel dataset for autonomous navigation in arid unstructured environments</p>
       <a href="#" class="banner-btn">Get Started</a> </div>
   </div>
 </div>
