--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
       <div class="gallery no-padding col-lg-12 col-sm-12">
         <div class="col-lg-4 col-sm-6 spring no-padding">
-          <div class="item-img"> <a class="single-image" href="images/gall1.jpg"></a>
+          <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/gall1.jpg" alt="image">
               <div class="overlay-img">
                 <h4>Spring</h4>
