--- a/index.html
+++ b/index.html
@@ -149,15 +149,16 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 section-title text-center">
-        <h3>Check our recent works</h3>
-        <p>Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p>
+        <h3>Sample Images and Annotations</h3>
+        <p>The O2DTD dataset is collected under six different light conditions, including Dawn, Morning, Afternoon, Sunset, Twilight, and Night.</p>
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30">
-        <button type="button" data-filter='*' class="active">All</button>
-        <button type="button" data-filter='.summer'>Summer</button>
-        <button type="button" data-filter='.winter'>Winter</button>
-        <button type="button" data-filter='.rainy'>Rainy</button>
-        <button type="button" data-filter='.spring'>Spring</button>
+        <button type="button" data-filter='.Dawn'>Dawn</button>
+        <button type="button" data-filter='.Morning'>Morning</button>
+        <button type="button" data-filter='.Afternoon'>Afternoon</button>
+        <button type="button" data-filter='.Sunset'>Sunset</button>
+        <button type="button" data-filter='.Twilight'>Twilight</button>
+        <button type="button" data-filter='.Night'>Night</button>
       </div>
       <div class="gallery no-padding col-lg-12 col-sm-12">
         <div class="col-lg-4 col-sm-6 spring no-padding">
