--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p>The O2DTD dataset is collected under six different light conditions, including Dawn, Morning, Afternoon, Sunset, Twilight, and Night.</p>
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30">
-        <button type="button" data-filter='.Dawn'>Dawn</button>
+        <button type="button" data-filter='.Dawn' class="active">Dawn</button>
         <button type="button" data-filter='.Morning'>Morning</button>
         <button type="button" data-filter='.Afternoon'>Afternoon</button>
         <button type="button" data-filter='.Sunset'>Sunset</button>
