--- a/index.html
+++ b/index.html
@@ -163,80 +163,61 @@
       <div class="gallery no-padding col-lg-12 col-sm-12">
         <div class="col-lg-4 col-sm-6 spring no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/gall1.jpg" alt="image">
+            <div class="part-img"> <img src="images/Dawn1.png" alt="image">
               <div class="overlay-img">
-                <h4>Spring</h4>
-                <h6>Autumn Leaves</h6>
+                <h4>Dawn</h4>
+                <h6>Image 1</h6>
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 spring no-padding">
-          <div class="item-img"> <a class="single-image" href="images/gall2.jpg"></a>
-            <div class="part-img"> <img src="images/gall2.jpg" alt="image">
+          <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img src="images/Dawn1.png" alt="image">
               <div class="overlay-img">
-                <h4>Spring</h4>
-                <h6>Flower Pot</h6>
+                <h4>Dawn</h4>
+                <h6>Image 2</h6>
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 spring no-padding">
-          <div class="item-img"> <a class="single-image" href="images/gall3.jpg"></a>
-            <div class="part-img"> <img src="images/gall3.jpg" alt="image">
+          <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img src="images/Dawn1.png" alt="image">
               <div class="overlay-img">
-                <h4>Spring</h4>
-                <h6>Bird with Flower</h6>
+                <h4>Dawn</h4>
+                <h6>Image 3</h6>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 summer no-padding">
-          <div class="item-img"> <a class="single-image" href="images/gall4.jpg"></a>
-            <div class="part-img"> <img src="images/gall4.jpg" alt="image">
+
+        <div class="col-lg-4 col-sm-6 spring no-padding">
+          <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
               <div class="overlay-img">
-                <h4>Summer</h4>
-                <h6>Vacation Trip Van</h6>
+                <h4>Dawn</h4>
+                <h6>Annotation 1</h6>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 winter no-padding">
-          <div class="item-img"> <a class="single-image" href="images/gall5.jpg"></a>
-            <div class="part-img"> <img src="images/gall5.jpg" alt="image">
+        <div class="col-lg-4 col-sm-6 spring no-padding">
+          <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
               <div class="overlay-img">
-                <h4>Winter</h4>
-                <h6>Girl in the snow</h6>
+                <h4>Dawn</h4>
+                <h6>Annotation 2</h6>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 rainy no-padding">
-          <div class="item-img"> <a class="single-image" href="images/gall6.jpg"></a>
-            <div class="part-img"> <img src="images/gall6.jpg" alt="image">
+        <div class="col-lg-4 col-sm-6 spring no-padding">
+          <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
               <div class="overlay-img">
-                <h4>Rainy</h4>
-                <h6>Man with an Umberalla</h6>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 summer no-padding">
-          <div class="item-img"> <a class="single-image" href="images/gall7.jpg"></a>
-            <div class="part-img"> <img src="images/gall7.jpg" alt="image">
-              <div class="overlay-img">
-                <h4>Summer</h4>
-                <h6>New Beginning</h6>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 rainy no-padding">
-          <div class="item-img"> <a class="single-image" href="images/gall8.jpg"></a>
-            <div class="part-img"> <img src="images/gall8.jpg" alt="image">
-              <div class="overlay-img">
-                <h4>Rainy</h4>
-                <h6>Girl in the Rain</h6>
+                <h4>Dawn</h4>
+                <h6>Annotation 3</h6>
               </div>
             </div>
           </div>
