--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="part-img"> <img src="images/Dawn1.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
-                <h6>Image 1</h6>
+                <h6>Dawn 1</h6>
               </div>
             </div>
           </div>
@@ -175,8 +175,8 @@
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/Dawn1.png" alt="image">
               <div class="overlay-img">
-                <h4>Dawn</h4>
-                <h6>Image 2</h6>
+                <h4>Morning</h4>
+                <h6>Morning 1</h6>
               </div>
             </div>
           </div>
