--- a/index.html
+++ b/index.html
@@ -161,27 +161,27 @@
         <button type="button" data-filter='.night'>Night</button>
       </div>
       <div class="gallery no-padding col-lg-12 col-sm-12">
-        <div class="col-lg-4 col-sm-6 spring no-padding">
+        <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/Dawn1.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
-                <h6>Dawn 1</h6>
+                <h6>Image 1</h6>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 spring no-padding">
+        <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/Dawn1.png" alt="image">
               <div class="overlay-img">
-                <h4>Morning</h4>
-                <h6>Morning 1</h6>
+                <h4>Dawn</h4>
+                <h6>Image 2</h6>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 spring no-padding">
+        <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/Dawn1.png" alt="image">
               <div class="overlay-img">
@@ -192,7 +192,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-sm-6 spring no-padding">
+        <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
               <div class="overlay-img">
@@ -202,7 +202,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 spring no-padding">
+        <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
               <div class="overlay-img">
@@ -212,7 +212,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 spring no-padding">
+        <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
               <div class="overlay-img">
@@ -222,7 +222,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 summer no-padding">
+        <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image" href="images/gall9.jpg"></a>
             <div class="part-img"> <img src="images/gall9.jpg" alt="image">
               <div class="overlay-img">
