--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <button type="button" data-filter='.night'>Night</button>
       <br>
       <br>
+        <div class="col-lg-4 col-sm-6 dawn no-padding"></div>
       <div class="gallery no-padding col-lg-12 col-sm-12">
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
@@ -223,8 +224,6 @@
             </div>
           </div>
         </div>
-       </div> 
-      <div class="gallery no-padding col-lg-12 col-sm-12">
         <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image" href="images/gall9.jpg"></a>
             <div class="part-img"> <img src="images/gall9.jpg" alt="image">
