--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <button type="button" data-filter='.night'>Night</button>
       <br>
       <br>
+      <data-filter='.dawn'>
       <div class="gallery no-padding col-lg-12 col-sm-12">
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
