--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <p>The O2DTD dataset is collected under six different light conditions, including Dawn, Morning, Afternoon, Sunset, Twilight, and Night.</p>
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30">
+        <body onload="document.getElementById('Dawn').click();">
         <button type="button" data-filter='.dawn' class="active">Dawn</button>
         <button type="button" data-filter='.morning'>Morning</button>
         <button type="button" data-filter='.afternoon'>Afternoon</button>
@@ -161,7 +162,6 @@
         <button type="button" data-filter='.night'>Night</button>
       <br>
       <br>
-      <data-filter='.dawn'>
       <div class="gallery no-padding col-lg-12 col-sm-12">
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
