--- a/index.html
+++ b/index.html
@@ -153,12 +153,13 @@
         <p>The O2DTD dataset is collected under six different light conditions, including Dawn, Morning, Afternoon, Sunset, Twilight, and Night.</p>
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30">
-        <button type="button" data-filter='.dawn' class="active">Dawn</button>
+        <button type="button" id="homebutton" data-filter='.dawn' class="active">Dawn</button>
         <button type="button" data-filter='.morning'>Morning</button>
         <button type="button" data-filter='.afternoon'>Afternoon</button>
         <button type="button" data-filter='.sunset'>Sunset</button>
         <button type="button" data-filter='.twilight'>Twilight</button>
         <button type="button" data-filter='.night'>Night</button>
+        <body onload="document.getElementById('homebutton').click();">
       <br>
       <br>
       <div class="gallery no-padding col-lg-12 col-sm-12">
