--- a/index.html
+++ b/index.html
@@ -154,12 +154,16 @@
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30">
         <button type="button" id="homebutton" data-filter='.dawn' class="active">Dawn</button>
+<script>
+$(document).ready(function () {
+   document.getElementById("homebutton").click();
+});
+</script>        
         <button type="button" data-filter='.morning'>Morning</button>
         <button type="button" data-filter='.afternoon'>Afternoon</button>
         <button type="button" data-filter='.sunset'>Sunset</button>
         <button type="button" data-filter='.twilight'>Twilight</button>
         <button type="button" data-filter='.night'>Night</button>
-        <body onload="document.getElementById('homebutton').click();">
       <br>
       <br>
       <div class="gallery no-padding col-lg-12 col-sm-12">
