--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <button type="button" id="homebutton" data-filter='.dawn' class="active">Dawn</button>
 <script>
 $(document).ready(function () {
-   document.getElementById("homebutton").click();
+   document.getElementById("homebutton").trigger("click");
 });
 </script>        
         <button type="button" data-filter='.morning'>Morning</button>
