--- a/index.html
+++ b/index.html
@@ -154,11 +154,9 @@
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30">
         <button type="button" id="homebutton" data-filter='.dawn' class="active">Dawn</button>
-<script>
-$(document).ready(function () {
-   document.getElementById("homebutton").trigger("click");
-});
-</script>        
+<script type="text/javascript">
+document.getElementById("homebutton").click();
+</script>      
         <button type="button" data-filter='.morning'>Morning</button>
         <button type="button" data-filter='.afternoon'>Afternoon</button>
         <button type="button" data-filter='.sunset'>Sunset</button>
