--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script>
+window.onload=function(){
+$("#homebutton").click();
+}
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>O2DTD Dataset</title>
