--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>
-window.onload=function(){
-$("#homebutton").click();
-}
-</script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <title>O2DTD Dataset</title>
@@ -22,8 +17,7 @@ $("#homebutton").click();
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
-<body>
+<body onload="document.getElementById('homebutton').click();">
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
   <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="images/logo-white.png" alt="logo" class="logo-1"> </a>
