--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body onload="document.getElementById('homebutton').click();">
+<body onload="document.getElementById("homebutton").click();">
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
   <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="images/logo-white.png" alt="logo" class="logo-1"> </a>
