--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         <h3>Sample Images and Annotations</h3>
         <p>The O2DTD dataset is collected under six different light conditions, including Dawn, Morning, Afternoon, Sunset, Twilight, and Night.</p>
         <span class="section-title-line"></span> </div>
-      <div class="filtering text-center mb-30">
-        <button type="button" id="homebutton" data-filter='.dawn' class="active">Dawn</button>    
+      <div class="filtering text-center mb-30" id="homebutton">
+        <button type="button" data-filter='.dawn' class="active">Dawn</button>    
         <button type="button" data-filter='.morning'>Morning</button>
         <button type="button" data-filter='.afternoon'>Afternoon</button>
         <button type="button" data-filter='.sunset'>Sunset</button>
