--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
  
             /* Access image by id and change
             the display property to block*/
-            document.getElementById('image')
+            document.getElementById('nonhomeimage')
                     .style.display = "block";
  
             document.getElementById('btnID')
