--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 morning no-padding">
+        <div class="col-lg-4 col-sm-6 afternoon no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img id="nonhomeimage" src="images/gall9.jpg" alt="image">
         <script>
