--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="#" class="anchor-btn">Learn more <i class="fas fa-arrow-right pd-lt-10"></i></a> </div>
       </div>
       <div class="col-md-6 mb-50">
-        <div class="section-img"> <img src="images/intro.png" alt="" class="img-responsive"/> </div>
+        <div class="section-img"> <img src="images/Intro.png" alt="" class="img-responsive"/> </div>
       </div>
     </div>
   </div>
