--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
           <div class="sub-title-paragraph">
             <h4>You can conquer the world.</h4>
             <h5>If you have right set of mind and thus you can rule the world. Cheers!</h5>
-            <p>Nam non erat feugiat, pellentesque mi ut, finibus tellus. Ut eget ex sodales, feugiat elit non, semper ex. Sed laoreet lectus nisl, sit amet porttitor lacus porta nec. Quisque sit amet metus sagittis, tincidunt tellus in, efficitur lorem. Sed scelerisque tellus nisl, eget tincidunt elit aliquet vitae. Integer id felis ut ipsum tristique iaculis. Mauris sed nibh enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc sagittis rhoncus sollicitudin. Maecenas eget dui a neque rutrum tincidunt sed non ipsum.</p>
+            <p>Free space detection plays a vital role in autonomous vehicle technology for both perception and navigation. Over the past decade, 
+                it has been established that deep learning-based approaches to free space identification may be reliably applied in the real world. 
+                However, these efforts primarily focused on on-road urban settings, and few algorithms were developed for free space detection in 
+                off-road contexts. Nonetheless, the available off-road datasets and research do not significantly emphasize desert traversability analysis. 
+                Consequently, it is necessary to explore how well self-driving cars perform in harsh unstructured, and arid environments. To this end, 
+                we present a new dataset named Off-Road Open Desert Trail Detection (O2DTD), the first dataset focused on desert free space detection. 
+                The dataset was collected with six different light conditions (dawn, morning, afternoon, sunset, twilight, and night).</p>
           </div>
           <a href="#" class="anchor-btn">Learn more <i class="fas fa-arrow-right pd-lt-10"></i></a> </div>
       </div>
