--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
-        <h3>We Are Best At Our Work</h3>
-        <p>Suspendisse fringilla eget arcu et bibendum. Vestibulum elementum dui tempus dolor gravida, vel mattis erat fermentum.</p>
+        <h3>O2DTD Dataset Overview</h3>
+        <p>A novel dataset for autonomous navigation in arid unstructured environments.</p>
         <span class="section-title-line"></span> </div>
       <div class="col-md-6 mb-50">
         <div class="section-info">
