--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="row">
       <div class="col-md-12 section-title text-center">
         <h3>O2DTD Dataset Overview</h3>
-        <p>A novel dataset for autonomous navigation in arid unstructured environments.</p>
+        <p>The overarching goal of the O2DTD dataset is to help advance autonomous driving and navigation systems for traversing less focused arid landscapes.</p>
         <span class="section-title-line"></span> </div>
       <div class="col-md-6 mb-50">
         <div class="section-info">
