--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30" id="homebutton">
         <button type="button" data-filter='.dawn' class="active">Dawn</button>    
-        <button type="button" onclick="show()" id="btnID" data-filter='.morning'>Morning</button>
+        <button type="button" data-filter='.morning'>Morning</button>
         <button type="button" data-filter='.afternoon'>Afternoon</button>
         <button type="button" data-filter='.sunset'>Sunset</button>
         <button type="button" data-filter='.twilight'>Twilight</button>
@@ -177,7 +177,7 @@
       <div class="gallery no-padding col-lg-12 col-sm-12">
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Dawn1.png" alt="image">
+            <div class="part-img"> <img src="images/Dawn 325.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Image 1</h6>
@@ -187,7 +187,7 @@
         </div>
         <div class="col-lg-10 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Dawn1.png" alt="image">
+            <div class="part-img"> <img src="images/Dawn 518.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Image 2</h6>
@@ -197,7 +197,7 @@
         </div>
         <div class="col-lg-10 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Dawn1.png" alt="image">
+            <div class="part-img"> <img src="images/Dawn 791.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Image 3</h6>
@@ -208,7 +208,7 @@
 
         <div class="col-lg-10 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
+            <div class="part-img"> <img src="images/Dawn 325L.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 1</h6>
@@ -218,7 +218,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
+            <div class="part-img"> <img src="images/Dawn 518L.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 2</h6>
@@ -228,7 +228,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Dawn1A.png" alt="image">
+            <div class="part-img"> <img src="images/Dawn 791L.png" alt="image">
               <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 3</h6>
