--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <!-- End Services --> 
 
 <!-- Gallery -->
-<div class="portfolio section-padding" data-scroll-index='6'>
+<div class="portfolio section-padding" data-scroll-index='3'>
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 section-title text-center">
@@ -237,14 +237,14 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
+            <div class="item-img"> <a class="single-image"></a>
+            <div class="part-img"> <img id="morning" src="images/Morning 125.png" alt="image">
         <script>
         function show() {
             document.getElementById('morning')
                     .style.display = "block";        }
         </script>
-            <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="morning" src="images/Morning 125.png" alt="image">
-              <div class="overlay-img">
+                <div class="overlay-img">
                 <h4>Summer</h4>
                 <h6>Fun at the Seashores</h6>
               </div>
@@ -254,7 +254,12 @@
         <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img id="morning" src="images/Morning 316.png" alt="image">
-              <div class="overlay-img">
+        <script>
+        function show() {
+            document.getElementById('morning')
+                    .style.display = "block";        }
+        </script>     
+                <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 3</h6>
               </div>
