--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30" id="homebutton">
         <button type="button" data-filter='.dawn' class="active">Dawn</button>    
-        <button type="button" onclick="showMorning()" id="btnMorID" data-filter='.morning'>Morning</button>
+        <button type="button" onclick="showMorning()" id="btnMorID">Morning</button>
         <button type="button" onclick="showAfternoon()" id="btnAftID" data-filter='.afternoon'>Afternoon</button>
         <button type="button" onclick="showSunset()" id="btnSunID" data-filter='.sunset'>Sunset</button>
         <button type="button" onclick="showTwilight()" id="btnTwiID" data-filter='.twilight'>Twilight</button>
