--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30" id="homebutton">
         <button type="button" data-filter='.dawn' class="active">Dawn</button>    
-        <button type="button" onclick="showMorning()" id="btnMorID">Morning</button>
+        <button type="button" onclick="showMorning()" id="btnMorID" data-filter='.morning'>Morning</button>
         <button type="button" onclick="showAfternoon()" id="btnAftID" data-filter='.afternoon'>Afternoon</button>
         <button type="button" onclick="showSunset()" id="btnSunID" data-filter='.sunset'>Sunset</button>
         <button type="button" onclick="showTwilight()" id="btnTwiID" data-filter='.twilight'>Twilight</button>
@@ -250,7 +250,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="morning" src="images/Morning 316.png" alt="image">
+            <div class="part-img"> <img id="morning2" src="images/Morning 316.png" alt="image">
                 <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 3</h6>
