--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30" id="homebutton">
         <button type="button" data-filter='.dawn' class="active">Dawn</button>    
-        <button type="button" onclick="showMorning()" id="btnID" data-filter='.morning'>Morning</button>
+        <button type="button" onclick="showMorning()">Morning</button>
         <button type="button" onclick="showAfternoon()" id="btnID" data-filter='.afternoon'>Afternoon</button>
         <button type="button" onclick="showSunset()" id="btnID" data-filter='.sunset'>Sunset</button>
         <button type="button" onclick="showTwilight()" id="btnID" data-filter='.twilight'>Twilight</button>
@@ -236,14 +236,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 morning no-padding">
+        <div id="morning" class="col-lg-4 col-sm-6 no-padding">
             <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="morning" src="images/Morning 125.png" alt="image">
-        <script>
-        function showMorning() {
-            document.getElementById('morning')
-                    .style.display = "block";        }
-        </script>     
+            <div class="part-img"> <img src="images/Morning 125.png" alt="image">
                 <div class="overlay-img">
                 <h4>Summer</h4>
                 <h6>Fun at the Seashores</h6>
@@ -251,14 +246,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 morning no-padding">
+        <div id="morning" class="col-lg-4 col-sm-6 no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="morning2" src="images/Morning 316.png" alt="image">
-        <script>
-        function showMorning() {
-            document.getElementById('morning2')
-                    .style.display = "block";        }
-        </script>    
+            <div class="part-img"> <img src="images/Morning 316.png" alt="image">
                 <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 3</h6>
@@ -266,6 +256,16 @@
             </div>
           </div>
         </div>
+<script>
+function showMorning() {
+  var x = document.getElementById('id="morning"');
+  if (x.style.display === 'none') {
+    x.style.display = 'block';
+  } else {
+    x.style.display = 'none';
+  }
+}       
+</script>
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img id="nonhomeimage" src="images/gall9.jpg" alt="image">
