--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </div>
 <script>
 function showMorning() {
-  var x = document.getElementById('id="morn"');
+  var x = document.getElementById('morn');
   if (x.style.display === 'none') {
     x.style.display = 'block';
   } else {
