--- a/index.html
+++ b/index.html
@@ -258,12 +258,8 @@
         </div>
 <script>
 function showMorning() {
-  var x = document.getElementById('morn');
-  if (x.style.display === 'none') {
-    x.style.display = 'block';
-  } else {
-    x.style.display = 'none';
-  }
+            document.getElementById('morn')
+                    .style.display = "block";
 }       
 </script>
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
