--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
             </div>
           </div>
         </div>
-        <div id="morn" class="col-lg-4 col-sm-6 morning no-padding">
+        <div class="col-lg-4 col-sm-6 morning no-padding">
             <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Morning 125.png" alt="image">
+            <div class="part-img"> <img id="morn" src="images/Morning 125.png" alt="image">
                 <div class="overlay-img">
                 <h4>Summer</h4>
                 <h6>Fun at the Seashores</h6>
@@ -246,9 +246,9 @@
             </div>
           </div>
         </div>
-        <div id="morn" class="col-lg-4 col-sm-6 morning no-padding">
+        <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img src="images/Morning 316.png" alt="image">
+            <div class="part-img"> <img id="morn" src="images/Morning 316.png" alt="image">
                 <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 3</h6>
