--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
         <span class="section-title-line"></span> </div>
       <div class="filtering text-center mb-30" id="homebutton">
         <button type="button" data-filter='.dawn' class="active">Dawn</button>    
-        <button type="button" onclick="showMorning()" id="btnID" data-filter='.morning'>Morning</button>
-        <button type="button" onclick="showAfternoon()" id="btnID" data-filter='.afternoon'>Afternoon</button>
-        <button type="button" onclick="showSunset()" id="btnID" data-filter='.sunset'>Sunset</button>
-        <button type="button" onclick="showTwilight()" id="btnID" data-filter='.twilight'>Twilight</button>
-        <button type="button" onclick="showNight()" id="btnID" data-filter='.night'>Night</button>
+        <button type="button" onclick="show()" id="btnID" data-filter='.morning'>Morning</button>
+        <button type="button" onclick="show()" id="btnID" data-filter='.afternoon'>Afternoon</button>
+        <button type="button" onclick="show()" id="btnID" data-filter='.sunset'>Sunset</button>
+        <button type="button" onclick="show()" id="btnID" data-filter='.twilight'>Twilight</button>
+        <button type="button" onclick="show()" id="btnID" data-filter='.night'>Night</button>
       </div>
       <br>
       <br>
@@ -238,7 +238,17 @@
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
             <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="morn" src="images/Morning 125.png" alt="image">
+            <div class="part-img"> <img id="nonhomeimage" src="images/Morning 125.png" alt="image">
+        <script>
+        function show() {
+            /* Access image by id and change
+            the display property to block*/
+            document.getElementById('nonhomeimage')
+                    .style.display = "block";
+ 
+
+        }
+    </script>
                 <div class="overlay-img">
                 <h4>Summer</h4>
                 <h6>Fun at the Seashores</h6>
@@ -248,7 +258,17 @@
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="morn" src="images/Morning 316.png" alt="image">
+            <div class="part-img"> <img id="nonhomeimage" src="images/Morning 316.png" alt="image">
+        <script>
+        function show() {
+            /* Access image by id and change
+            the display property to block*/
+            document.getElementById('nonhomeimage')
+                    .style.display = "block";
+ 
+
+        }
+    </script>
                 <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 3</h6>
@@ -256,17 +276,11 @@
             </div>
           </div>
         </div>
-<script>
-function showMorning() {
-            document.getElementById('morn')
-                    .style.display = "block";
-}       
-</script>
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img id="nonhomeimage" src="images/gall9.jpg" alt="image">
         <script>
-        function showAfternoon() {
+        function show() {
             /* Access image by id and change
             the display property to block*/
             document.getElementById('nonhomeimage')
