--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
             <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="nonhomeimage" src="images/Morning 125.png" alt="image">
+            <div class="part-img"> <img id="nonhomeimage1" src="images/Morning 125.png" alt="image">
         <script>
         function show() {
             /* Access image by id and change
             the display property to block*/
-            document.getElementById('nonhomeimage')
+            document.getElementById('nonhomeimage1')
                     .style.display = "block";
  
 
@@ -258,12 +258,12 @@
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="nonhomeimage" src="images/Morning 316.png" alt="image">
+            <div class="part-img"> <img id="nonhomeimage2" src="images/Morning 316.png" alt="image">
         <script>
         function show() {
             /* Access image by id and change
             the display property to block*/
-            document.getElementById('nonhomeimage')
+            document.getElementById('nonhomeimage2')
                     .style.display = "block";
  
 
@@ -278,12 +278,12 @@
         </div>
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="nonhomeimage" src="images/gall9.jpg" alt="image">
+            <div class="part-img"> <img id="nonhomeimage3" src="images/gall9.jpg" alt="image">
         <script>
         function show() {
             /* Access image by id and change
             the display property to block*/
-            document.getElementById('nonhomeimage')
+            document.getElementById('nonhomeimage3')
                     .style.display = "block";
  
 
