--- a/index.html
+++ b/index.html
@@ -238,15 +238,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 morning no-padding">
             <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="MorningImgs src="images/Morning 125.png" alt="image">
-                           <script>
-        function showMorning() {
-            /* Access image by id and change
-            the display property to block*/
-            document.getElementById('MorningImgs')
-                    .style.display = "block";
-        }
-    </script> 
+            <div class="part-img"> <img id="MorningImgs" src="images/Morning 125.png" alt="image">
                 <div class="overlay-img">
                 <h4>Summer</h4>
                 <h6>Fun at the Seashores</h6>
@@ -256,7 +248,7 @@
         </div>                 
         <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="MorningImgs src="images/Morning 316.png" alt="image">
+            <div class="part-img"> <img id="MorningImgs" src="images/Morning 316.png" alt="image">
                 <div class="overlay-img">
                 <h4>Dawn</h4>
                 <h6>Annotation 3</h6>
@@ -273,8 +265,6 @@
             the display property to block*/
             document.getElementById('nonhomeimage3')
                     .style.display = "block";
- 
-
         }
     </script>
               <div class="overlay-img">
@@ -287,6 +277,14 @@
       </div>  
   </div>  
 </div>
+<script>
+        function showMorning() {
+            /* Access image by id and change
+            the display property to block*/
+            document.getElementById('MorningImgs')
+                    .style.display = "block";
+        }
+</script> 
 </div>
     
     
