--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="filtering text-center mb-30" id="homebutton">
         <button type="button" data-filter='.dawn' class="active">Dawn</button>    
         <button type="button" id="MorBtnID" data-filter='.morning'>Morning</button>
-        <button type="button" onclick="show()" id="btnID" data-filter='.afternoon'>Afternoon</button>
+        <button type="button" id="AftBtnID" data-filter='.afternoon'>Afternoon</button>
         <button type="button" onclick="show()" id="btnID" data-filter='.sunset'>Sunset</button>
         <button type="button" onclick="show()" id="btnID" data-filter='.twilight'>Twilight</button>
         <button type="button" onclick="show()" id="btnID" data-filter='.night'>Night</button>
@@ -255,7 +255,7 @@
         </div>                 
         <div class="col-lg-4 col-sm-6 morning no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="MorningImg2" src="images/Morning 316.png" alt="image">
+            <div class="part-img"> <img id="MorningImg2" src="images/Morning 316.png" alt="image" style="display: none;">
    <script>
       const MorBtn2 = document.getElementById("MorBtnID");
       const MorImg2 = document.getElementById("MorningImg2"); 
@@ -272,15 +272,14 @@
         </div>
           <div class="col-lg-4 col-sm-6 afternoon no-padding">
           <div class="item-img"> <a class="single-image"></a>
-            <div class="part-img"> <img id="nonhomeimage3" src="images/gall9.jpg" alt="image">
-        <script>
-        function show() {
-            /* Access image by id and change
-            the display property to block*/
-            document.getElementById('nonhomeimage3')
-                    .style.display = "block";
-        }
-    </script>
+            <div class="part-img"> <img id="nonhomeimage3" src="images/gall9.jpg" alt="image" style="display: none;">
+   <script>
+      const AftBtn1 = document.getElementById("AftBtnID");
+      const AftImg1 = document.getElementById("nonhomeimage3"); 
+      AftBtn1.addEventListener("click", () => { 
+         AftImg1.style.display = "block"; 
+      });
+   </script>
               <div class="overlay-img">
                 <h4>Summer</h4>
                 <h6>Fun at the Seashores</h6>
