--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
       <br>
       <br>
-      <div class="gallery no-padding col-lg-10 col-sm-12">
+      <div class="gallery no-padding col-lg-10 col-sm-10 mx-auto">
         <div class="col-lg-4 col-sm-6 dawn no-padding">
           <div class="item-img"> <a class="single-image"></a>
             <div class="part-img"> <img src="images/Dawn 325.png" alt="image">
